--- a/treino-texto.html
+++ b/treino-texto.html
@@ -1,10 +1,11 @@
-<meta charset="UTF-8">
-
-<h1> TEXTO </h1>
-
-<br>
-
-A convenção que usaremos para criar nosso programa é adotar letras minúsculas e não usar acentos e, claro, usar a extensão .html.
-<br>
-<br>
-Outro ponto importante é que toda alteração feita no arquivo .html deve ser salva e, além disso, o navegador precisa recarregar a página para que a última alteração do arquivo entre em vigor.
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TEXTO SIMPLES</title>
+</head>
+<body>
+    <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt fuga error accusantium odio animi ab rem, autem praesentium ea laboriosam ipsam iure aliquid quas porro, veritatis neque maxime aliquam molestiae.</P>
+</body>
+</html>
