Mais um paragrafo adicionado!

--- a/treino-texto.html
+++ b/treino-texto.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt fuga error accusantium odio animi ab rem, autem praesentium ea laboriosam ipsam iure aliquid quas porro, veritatis neque maxime aliquam molestiae.</P>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias reprehenderit eveniet provident eum minima, magni eaque dolores pariatur harum nobis perferendis quod ab esse nisi labore voluptate sint id corrupti.</p>
 </body>
 </html>
